<resources>
    <string name="app_name">Caldroid Sample</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="undo">Undo</string>
    <string name="salesforce_id">6d9f894a-091e-4616-b6f4-543b9c357e3e</string>
    <string name="salesforce_access_token">ewcnqeqhcsf35ht4frd3s48t</string>
    <string name="salesforce_gcm_sender_id">1074063341580</string>
    <string name="flurry_id">92ZR43KXZ2KCX383KFYN</string>
    <string name="jeenga_id">cb3b3b25-2391-42e3-ad44-f961407231ed</string>
    <string name="analytics_id">UA-12855684-2</string>
    <string name="activity_splash_lbl_version_code">VERSÃO %1$s</string>
    <string name="activity_splash_lbl_version">Versão</string>
    <string name="activity_splash_lbl_message_welcome">BUSQUE MENOS. VIAJE MAIS.</string>
    <string name="txt_accept_terms">Ao se registrar você aceita os nossos <a href="">termos de uso</a> e aceita receber comunicações do Voopter e parceiros.</string>
    <string name="text_nao_economiza"><u>Não quero economizar em passagens aéreas</u></string>
    <string name="text_login_new1">INICIE SUA SESSÃO</string>
    <string name="text_login_new2">É <b>gratis</b> e te ajuda a <b>economizar</b>\nnas passagens aéreas</string>
    <string name="create_account">CRIE UMA CONTA</string>
    <string name="enter_facebook">ENTRAR COM FACEBOOK</string>
    <string name="title_login">LOGIN</string>
    <string name="enter">ENTRAR</string>
    <string name="text_enter2">Entre e tenha acesso à ferramentas\nexclusivas, como o alerta de preços e\nsincronização em todos os seus\ndispositivos.</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="nao_tenho_cadastro">Não tenho cadastro</string>
    <string name="title_entrar">ENTRAR</string>
    <string name="gallery">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="tempo_real">Tempo real</string>
    <string name="minha_conta">MINHA CONTA</string>
    <string name="salvar">Salvar</string>
    <string name="hint_data_nascimento">Data de nascimento</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="desconectar">DESCONECTAR</string>
    <string name="user_updated">Usuário alterado com sucesso.</string>
    <string name="error_update">Ocorreu um erro ao efetuar a alteração. Por favor tente novamente.</string>
    <string name="activity_create_account_lbl_create">CRIE SUA CONTA</string>
    <string name="hint_edite_nome">Digite seu nome</string>
    <string name="hint_edite_email">Digite seu email</string>
    <string name="hint_edite_senha">Digite sua senha</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_cidade_partida">Cidade de partida usual</string>
    <string name="hint_repita_senha">Repita a senha</string>
    <string name="criar_conta">CRIAR CONTA</string>
    <string name="text_enter">Cadastre-se e tenha acesso à\nferramentas exclusivas, como o alerta de \n preços e sincronização em todos os\nseus dispositivos.</string>
    <string name="inform_mail_valid">Informe um e-mail válido</string>
    <string name="identic_pass">A senha e a confirmação de senha devem ser idênticas</string>
    <string name="menu_ofertas2">PROMOÇÕES E DICAS</string>
    <string name="menu_buscar2">PESQUISA DE PASSAGENS</string>
    <string name="menu_melhores_precos2">PASSAGENS BARATAS</string>
    <string name="menu_alertas">ALERTAS</string>
    <string name="menu_config">CONFIGURAÇÕES</string>
    <string name="menu_header_no_user__lbl_message">ENTRE / CRIE SUA CONTA\npara usar alertas e outros recursos.</string>
    <string name="melhores_precos_partindo">PASSAGENS BARATAS\nPARTINDO DE</string>
    <string name="encontrado_usuarios">Encontrados pelos usuários do Voopter</string>
    <string name="pic_choose_question">Selecione de onde quer a imagem</string>
    <string name="qualquer_lugar">QUALQUER LUGAR</string>
    <string name="Entre">Entre</string>
    <string name="a_partir_de">A partir de</string>
    <string name="Ate">Até</string>
    <string name="e_min">e</string>
    <string name="passagem_encontra">PASSAGEM ENCONTRADA!</string>
    <string name="por_menos">Por menos de</string>
    <string name="encontre_passagem">ENCONTRE SUA PASSAGEM</string>
    <string name="fragment_about_lbl_title">VOOPTER COMPARA PREÇOS DE PASSAGENS ÁREAS E HOTÉIS DE CENTENAS DE COMPANHIAS ÁREAS E AGÊNCIAS DE VIAGENS ONLINE.</string>
    <string name="AboutText1">Assim é Voopter: grátis, intuitivo e com formas únicas de pesquisar passagens áreas e hotéis que ajudam você a economizar o seu dinheiro e também o seu tempo. Grande achado, não? E por isso mesmo não deve ficar em segredo: você compartilha os seus resultados com seus amigos, e Voopter compartilha com você as melhores ofertas de companhias aéreas e agências de viagens.</string>
    <string name="AboutHeader2">Voopter Buscador de Passagens Aéreas</string>
    <string name="AboutText2">Está indeciso sobre quando viajar? Quer saber que dia tem a melhor tarifa? Voopter possui um exclusivo calendário multidatas que permite que você encontre, em apenas uma pesquisa, os melhores preços da maioria de páginas que venden viagens na internet, de agências online a companhias lowcost. não é uma maravilha?</string>
    <string name="AboutHeader3"> </string>
    <string name="AboutText3"> </string>
    <string name="AboutHeader4">O que Voopter não é</string>
    <string name="AboutText4">O Voopter, como você está vendo, é muita coisa, mas não é uma agência de viagens. Por tanto, não vende, emite ou reserva passagens Áreas, hotéis ou pacotes. Voopter é um metabuscador que lista as melhores alternativas, de acordo com os critérios selecionados, para que você compare e decida onde quer realizar sua compra. Que tal começar agora?</string>
    <string name="sua_conta">SUA CONTA</string>
    <string name="editar">Editar</string>
    <string name="nossa_politica">Nossa política de uso</string>
    <string name="sobre_voopter">Sobre o Voopter</string>
    <string name="create_alert">CRIAR NOVO ALERTA</string>
    <string name="crie_alerta">CRIE UM ALERTA</string>
    <string name="ou_logue_se">Ou entre com sua\nconta para ver seus alertas criados</string>
    <string name="empty_alerta">Você não possui alertas de preços criados.</string>
    <string name="confirm_delete_alert">Deseja realmente remover este alerta?</string>
    <string name="error_on_delete">Não foi possível remover o alerta. Por favor, tente novamente.</string>
    <string name="question_edit_delete">Selecione a ação que deseja</string>
    <string name="edit_alerta">Editar alerta</string>
    <string name="remove_alert">Remover alerta</string>
    <string name="criar_alerta">SALVAR ALERTA</string>
    <string name="editar_alerta">EDITAR ALERTA</string>
    <string name="new_alert">NOVO ALERTA</string>
    <string name="voltar_ate">VOLTAR ATË</string>
    <string name="origem">ORIGEM</string>
    <string name="destino">DESTINO</string>
    <string name="rs">R$</string>
    <string name="email">E-MAIL</string>
    <string name="periodo_de_viagem">PERÍODO DE VIAGEM</string>
    <string name="indique_periodo">Indique o período de datas em que você poderia viajar</string>
    <string name="ir_a_partir_de">IR A PARTIR DE</string>
    <string name="message_sucesso_alerta">Alerta criado com sucesso.</string>
    <string name="message_sucesso_edit_alerta">Alerta alterado com sucesso.</string>
    <string name="error_value_zero">O valor deve ser maior que zero.</string>
    <string name="error_aeroporto_origem">Informe o aeroporto de origem.</string>
    <string name="error_aeroporto_destino">Informe o aeroporto de destino.</string>
    <string name="selecione_ate">SELECIONE ATÉ</string>
    <string name="quatro_datas">4 DATAS</string>
    <string name="de_ida">DE IDA</string>
    <string name="datas_ida">DATAS DE IDA</string>
    <string name="datas_volta">DATAS DE VOLTA</string>
    <string name="de_volta">DE VOLTA</string>
    <string name="datas_ida_alerta">IR A PARTIR DE</string>
    <string name="datas_volta_alerta">VOLTAR ATÉ</string>
    <string name="melhores_precos_title">Passagens Baratas</string>
    <string name="nacionais">NACIONAIS</string>
    <string name="internacionais">INTERNACIONAIS</string>
    <string name="especifico">ESPECÍFICO</string>
    <string name="passagem_barata">PASSAGENS BARATAS IDA E VOLTA PARTINDO DE:</string>
    <string name="qualquer_cidade"><![CDATA[<style bold>QUALQUER CIDADE</style>]]></string>
    <string name="selecione_cidade_aeroporto">SELECIONE A CIDADE OU O AEROPORTO DE ORIGEM</string>
    <string name="offer_details_title_lbl_destiny">Destino:</string>
    <string name="offer_details_title_lbl_source">Partindo de:</string>
    <string name="offer_details_title_lbl_when">Quando viajar:</string>
    <string name="offer_details_title_lbl_company">Pra viajar com:</string>
    <string name="offer_details_title_lbl_readmore">Ler mais</string>
    <string name="quer_voar">Você quer voar partindo de outra cidade ou para um destino diferente? Faça sua busca com o Voopter! :)</string>
    <string name="precos_citados">Os preços apresentados no texto e na tabela são para passagens de ida e volta, com as taxas de embarque e encargos de emissão, que variam de acordo com o aeroporto e o vendedor escolhidos. As taxas podem ser conferidas diretamente na página do vendedor.
\n\n
Os valores citados no texto e na tabela são válidos por tempo indeterminado e podem mudar de acordo com a disponibilidade de lugares no voo. Confira sempre o valor final da sua passagem, antes de efetuar a compra.</string>
    <string name="buscar_mais_passagens">BUSCAR MAIS PASSAGENS</string>
    <string name="precos_citados_better_prices">Os preços apresentados na tabela são para passagens de ida e volta, com as taxas de embarque e encargos de emissão, que variam de acordo com o aeroporto e o vendedor escolhidos. As taxas podem ser conferidas diretamente na página do vendedor.
\n\n
Os valores citados na tabela são válidos por tempo indeterminado e podem mudar de acordo com a disponibilidade de lugares no voo. Confira sempre o valor final da sua passagem, antes de efetuar a compra.</string>
    <string name="ofertas">OFERTAS</string>
    <string name="nenhum_resultado">Não foram encontrados resultados.</string>
    <string name="tente_novamente2">Por favor, tente outra vez usando outras combinações de dias ou cidades.</string>
    <string name="valores_tabela">Os valores citado na tabela são válidos por tempo indeterminado e podem mudar de acordo com a disponibilidade de lugares no voo. Confira sempre o valor final da sua passagem, antes de efetuar a compra.</string>
    <string name="limpar">Limpar</string>
    <string name="adulto">ADULTO</string>
    <string name="adultos">ADULTOS</string>
    <string name="crianca">CRIANÇA</string>
    <string name="criancas">CRIANÇAS</string>
    <string name="bebe">BEBÊ</string>
    <string name="bebes">BEBÊS</string>
    <string name="adicione_4_datas">ADICIONE ATÉ 4 DATAS</string>
    <string name="ida">IDA</string>
    <string name="volta">VOLTA</string>
    <string name="idaevolta">IDA E VOLTA</string>
    <string name="soida">SÓ IDA</string>
    <string name="message_select_go_date">Selecione pelo menos uma data de ida</string>
    <string name="message_select_return_date">Selecione pelo menos uma data de volta</string>
    <string name="buscar_passagens">BUSCAR PASSAGENS</string>
    <string name="opcoes">OPÇÕES</string>
    <string name="criaralerta">CRIAR ALERTA</string>
    <string name="nova_busca">NOVA BUSCA</string>
    <string name="search_sucess">Comparação de passagens aéreas realizadas com</string>
    <string name="search_sucess1">sucesso</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancelar</string>
</resources>