<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_calendar__relativelayout_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eaeaea">

    <RelativeLayout
        android:id="@+id/act_frame_actionbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_back_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/label_cancel"
            android:padding="12dp"
            android:textColor="#00688d"
            android:visibility="gone" />


        <TextView
            android:id="@+id/activity_tickets_filter__textview_confirm"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/label_ok"
            android:textAllCaps="true"
            android:textColor="#00688d"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/activity_create_account__imageview_back"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:src="@drawable/seta_back_blue" />


        <TextView
            android:id="@+id/row_offer__textview_subtitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/datas_ida"
            android:textAllCaps="true"
            android:textColor="#5C5C5C"
            android:textSize="18sp" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_sombra"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/act_frame_actionbar"
        android:layout_marginTop="-1dp"
        android:background="@drawable/bg_sombra"
        android:orientation="vertical"></LinearLayout>

    <FrameLayout
        android:id="@+id/act_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/act_frame_result"
        android:layout_below="@+id/linear_sombra"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/act_frame_result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_bottom"
        android:layout_alignParentBottom="true"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_data_ida_volta_selecione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selecione_ate"
                android:textColor="#00aad6" />

            <TextView
                android:id="@+id/textview_data_ida_volta_datas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/quatro_datas"
                android:textColor="#00aad6" />

            <TextView
                android:id="@+id/textview_data_ida_volta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de_ida"
                android:textColor="#00aad6" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_selected1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_day_close"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dt_selected1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="01"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dt_selected1_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAI"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_selected2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_day_close"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dt_selected2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="01"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dt_selected2_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAI"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_selected3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_day_close"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dt_selected3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="01"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dt_selected3_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAI"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_selected4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/bg_day_close"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dt_selected4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="01"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dt_selected4_mes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MAI"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>